fixed in the page menu alignment

--- a/themes/gauge_theme/static/css/getting_started.css
+++ b/themes/gauge_theme/static/css/getting_started.css
@@ -540,79 +540,3 @@ h3 span.installer-icon {
     font-weight: 600;
 }
 
-/* @media screen and (max-width: 768px) and (min-width: 660px) {
-    #installation-selection .setup-selection {
-        width: 33%;
-        text-align: center;
-        min-height: 300px;
-        display: flex;
-        flex-direction: column;
-        margin-left: 0px;
-        margin-right: 0px;
-        padding-bottom: 5px;
-        border-radius: 5px;
-        align-items: center;
-    }
-
-    #installation-selection .radioContainer {
-        position: relative;
-        width: 100%;
-        height: 45px;
-        margin: 5px;
-        cursor: pointer;
-        padding-top: 15px;
-        font-size: 15px;
-        border-radius: 3px;
-        background-color: transparent !important;
-        text-align: left;
-        padding-left: 40px;
-        padding-top: 6px;
-    }
-
-    .selection-icon {
-        display: none;
-    }
-
-    .docs-container {
-        margin: 10px;
-        padding-right: 60px !important;
-    }
-
-    .docs-container h2 {
-        font-size: 14px !important;
-        margin-right: auto;
-    }
-
-    .mobile-local-toc {
-        width: 150px !important;
-        display: block;
-        padding-left: 38px;
-    }
-
-    .localtoc-container>ul {
-        padding: 10px 30px !important;
-    }
-
-    .edit-page {
-        display: none;
-    }
-    #change-filter {
-        display: block;
-        position: absolute;
-        top: -28px;
-        right: 0px;
-        text-align: right;
-    }
-    #search {
-        width: 100%;
-    }
-    .algolia-autocomplete {
-        margin-left: 0px!important;
-    }
-    #search-icon { 
-        left:15px!important;
-    }
-    .docs-toc li {
-        list-style-type: none;
-    }
-}
