--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -1917,7 +1917,7 @@ p.experimental-feature {
 
   .localtoc-container > ul {
     margin: 10px 0px;
-    padding-left: 15px;
+    padding-left: 25px;
   }
 
   #installation-selection .setup-selections {
